<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitteritto</string>
    <string name="oauth_name">OAUTH</string>
    <string name="start_activity">Twitteritto</string>
   
    <string name="action_settings">Settings</string>
     
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    
    <string name="dialog_fire_missiles">Delete message?</string>
     <string name="fire">Accept</string>
     <string name="cancel">Cansel</string>
    
    
    <string name="profile_description">Description it is so good description for descriping</string>
    <string name="profile_friends_count">friends</string>
    <string name="profile_followers_count">followers</string>
    <string name="profile_statuses_count">statuses</string>
    
    
    
    <string name="help">help</string>
    <string name="autorization">autorization</string>
    <string name="exit">exit</string>
    
    
    
    <string name="user_name">Username</string>
    <string name="profile_name">Profileaname</string>
    
    
    <string name="latex">LaTex</string>
    <string name="tweet">Tweet</string>
    <string name="refresh">Refresh</string>
    
    <string name="edit_post">What happening?</string>
    
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
	<string name="pull_to_refresh_release_label">Release to refresh...</string>
	<string name="pull_to_refresh_refreshing_label">Loading...</string>

</resources>
