<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/profileUpPart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <ImageView
            android:background="@drawable/border"
            android:id="@+id/profileIcon"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_gravity="center"
            android:contentDescription="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <TextView
            android:textColor="@android:color/white"
            
            android:id="@+id/userFullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_name"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/profileDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_description"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/profile_statuses_count"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/profile_friends_count"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/profile_followers_count"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/profileStatusesCount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/profile_statuses_count"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profileFriendsCount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/profile_friends_count"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profileFollowersCount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/profile_followers_count"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
	<ProgressBar
	    android:visibility="gone" 
	    android:id="@+id/userFeedProgressBar"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		/>
    <ListView
        android:id="@+id/userTimeline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>